--- a/.npmignore
+++ b/.npmignore
@@ -65,7 +65,11 @@ buck-out/
 # Library
 lib/
 
+# Formatting files
+.eslintrc.js
+
 # Example not needed in the package
 example/
+example-expo/
 assets/cover/
 assets/logo/
