--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-snappy",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "description": "React Native library for using Snappy Icons",
   "homepage": "https://github.com/fgrgic/react-native-snappy#readme",
   "main": "lib/index.js",
@@ -39,8 +39,11 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/runtime": "^7.16.7",
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/preset-react": "^7.22.0",
+    "@babel/preset-typescript": "^7.22.0",
+    "@babel/plugin-transform-runtime": "^7.22.0",
     "@react-native-community/eslint-config": "^3.0.1",
     "@types/jest": "^27.4.0",
     "@types/react-native": "^0.66.15",
@@ -71,5 +74,11 @@
       "json",
       "node"
     ]
+  },
+  "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0"
   }
 }
